code/project/manifests/argo-workflows/argo-server-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
      - name: argo-server
        args:
        - server
        - --secure=false
        readinessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTP
