code/project/manifests/argo-workflows/argo-server-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  type: NodePort
