code/project/manifests/argo-workflows/argo-server-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
spec:
  ingressClassName: traefik
  rules:
  - host: workflows.demo.akuity.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              name: web
